# mailpay

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SPEC.md  STACK.md  deploy.sh  lambda_function.py  pyproject.toml
.build/package/: webhook_handler.py
blader/: blader.py  deploy.sh  lambda_function.py
demo/: devnet_transfer.py  four_rails.py  solana_setup.py  webhook_handler.py
envelopay/: __init__.py
envelopay/agent/: __init__.py  loop.py
envelopay/checkout/: __init__.py  urls.py
envelopay/core/: SPEC.md  __init__.py  models.py  payment.py  receive.py  send.py
envelopay/trust/: INTERFACE.md  __init__.py  curator.py  exchange.py  interface.py  models.py
exchange/: README.md  cli.py  config.py  db.py  donate.py  handler.py  inbound.py  ledger.py  match.py  offer.py  rate.py  reply.py  routes.py  settle.py  shop.py  verify.py
mailpay/: __init__.py  agent.py  bridge.py  checkout.py  models.py  payment.py  receive.py  send.py
mailpay/agent/: SPEC.md  __init__.py  loop.py
mailpay/checkout/: SPEC.md  __init__.py
mailpay/core/: __init__.py  models.py  payment.py  receive.py  send.py
mailpay/trust/: INTERFACE.md  SPEC.md  __init__.py  curator.py  exchange.py  interface.py  models.py
shop/: README.md  shop.py
tests/: test_agent.py  test_checkout.py  test_exchange.py  test_roundtrip.py  test_solana_payment.py  test_trust.py  test_webhook.py
